--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
       "name"                    : "ee-stream-decoder"
     , "description"             : "stream decodes base64 and quoted printable data"
-    , "version"                 : "0.1.1"
+    , "version"                 : "0.1.2"
     , "homepage"                : "https://github.com/eventEmitter/ee-stream-decoder"
     , "author"                  : "Michael van der Weg <michael@eventemitter.com> (http://eventemitter.com/)" 
     , "licence"                 : "MIT"
-    , "os"                      : "linux"
+    , "os"                      : "!win"
     , "repository": {
         "url"                   : "https://github.com/eventEmitter/ee-stream-decoder"
     }
@@ -16,9 +16,9 @@
         "url"                   : "https://github.com/eventEmitter/ee-stream-decoder/issues"
     }
     , "dependencies": {
-          "ee-class"            : ">=0.1.3"
-        , "ee-log"              : "*"
-        , "ee-types"            : "*"
+          "ee-class"            : "0.3.x"
+        , "ee-log"              : "0.2.x"
+        , "ee-types"            : "0.1.x"
     }
     , "devDependencies": {}
     , "optionalDependencies": {}
